tests/paczka1/fuzzy1/29686115.err
Error in line 1: IDvtK S689 56,3
Error in line 9: IDvtK S282 95,8
Error in line 28: 91r7Y9p3Xn A570 -2,0
Error in line 20: S615 A570 77,3
Error in line 29: S615 S282 49,6
Error in line 33: kHt6mRK5j4 S282 20,9
